# music-tagger

./: .gitignore  README.md  pyproject.toml
music_tagger/: __init__.py  colors.py  exceptions.py  log.py  matcher.py  metadata.py  metadata_fields.py  metadata_parser.py  music_file.py  regexes.py  shazam_track.py  soundcloud.py  spotify.py  track.py  util.py
